--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,22 +1,28 @@
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
+    max-width: 1280px;
+    margin: 0 auto;
 }
 
 a,
 .green {
-  text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
+    text-decoration: none;
+    color: hsla(160, 100%, 37%, 1);
+    transition: 0.4s;
 }
 
 @media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
-  }
+    body {
+        display: flex;
+        place-items: center;
+    }
 }
 
-.modal-xl {
-  max-width: max-content;
+@media (min-width: 850px) {
+    .modal-dialog {
+        max-width: max-content;
+    }
+}
+
+.modal-dialog {
+    max-width: 850px;
 }
